# HPCG

./: CMakeLists.txt  Makefile
src/: ComputeDotProduct_ref.cpp  ComputeSPMV_ref.cpp  ComputeWAXPBY_ref.cpp  init.cpp  parallel_for.cpp  parallel_for.hpp
testing/: main.cpp
